# emc_rs

./: .env.example  ARM64_BUILD.md  Cargo.toml  Dockerfile  NON_DATABASE_FEATURE_FUNCTIONS.md  build-arm64.ps1  build-arm64.sh  dev-check.ps1  docker-compose.yml
.cargo/: cmake-compat.cmd  config.toml
.github/workflows/: cicd-dokploy.yml
files/: application.yml
src/: main.rs  state.rs
src/commands/: mod.rs
src/commands/administrator/: mod.rs  slashcommand_config_set.rs  slashcommand_config_show.rs  slashcommand_deletemessage.rs  slashcommand_security_lockdown.rs  slashcommand_timeout.rs
src/commands/developer/: messagecommand_eval.rs  messagecommand_reload.rs  mod.rs  slashcommand_eval.rs  slashcommand_reload.rs
src/commands/music/: messagecommand_play.rs  messagecommand_skip.rs  messagecommand_stop.rs  mod.rs  playback.rs  slashcommand_play.rs  slashcommand_skip.rs  slashcommand_stop.rs
src/commands/user/: mod.rs  slashcommand_random.rs
src/commands/utility/: messagecommand_ping.rs  mod.rs  slashcommand_ping.rs
src/components/: mod.rs
src/components/button/: mod.rs  music_clear.rs  music_skip.rs  music_stop.rs
src/components/select_menu/: mod.rs  music_search.rs  private_voice_invite.rs
src/events/: mod.rs
src/utils/: access_control.rs  cookie_manager.rs  discord_embed.rs  guild_settings.rs  lavalink_client.rs  lavalink_runtime.rs  level_calculator.rs  logging.rs  milisecond_calculator.rs  mod.rs  music_manager.rs  music_queue.rs  password_encryptor.rs  private_voice_registry.rs  search_cache.rs  settings_repository.rs  ytdlp_helper.rs
(+3 files in other folders)
